--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,20 +14,16 @@ html
 		link(rel="stylesheet" href="/scripts/pickadate/default.date.css")
 		link(rel="stylesheet" href="/scripts/pickadate/default.time.css")
 		link(rel="stylesheet", href="/stylesheets/styles.css?v="+ Math.random())
-		script(type="text/javascript", src="/scripts/jquery.min.js")
-		//- script(type="text/javascript", src="/scripts/jquery-ui.min.js")
-		script(type="text/javascript", src="/scripts/leaflet.js")
 		script(type="text/javascript", src="/scripts/vue.js")
-		script(type="text/javascript", src="/scripts/d3.v3.min.js")
-		//- script(type="text/javascript", src="/scripts/fabric.min.js")
+		script(type="text/javascript", src="/scripts/jquery.min.js")
+		script(type="text/javascript", src="/scripts/leaflet.js")
+		//- script(type="text/javascript", src="/scripts/d3.v3.min.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.date.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.time.js")
 		script(type="text/javascript", src="/scripts/moment-with-locales.min.js")
 		script(src="https://d3js.org/d3.v4.min.js")
-		//- script(type="text/javascript", src="/scripts/Dropdown.js")
-		//- script(type="text/javascript", src="/scripts/navbar.js")
-		//- script(type="text/javascript", src="/scripts/Panel.js")
+
 		script.
 			// Polyfill Object.assign 
 			if (typeof Object.assign !== 'function') {
