--- a/views/publish.pug
+++ b/views/publish.pug
@@ -49,21 +49,21 @@ block content
 							img(src="/images/refresh.svg")
 				div.btn
 					div.row
-						a.select.h.block.ms-Button(@click="category('H')" href="#" name="H" title="Housing") 
+						a.select.h.block.ms-Button(v-if="!swactive" @click="category('H')" href="#" name="H" title="Housing") 
 							div(v-if="!swactive")
 								p.ms-font-m.buttonlabel Housing
 								img(src="/images/housing.svg")
-						a.select.h.block.ms-Button(v-if="swactive && sw" @click="category('Men')" href="#" name="Men" title="Men's shelter") 
+						a.select.h.block.ms-Button(v-if="swactive && sw" @click="category('Men')" href="#" name="H" title="Men's shelter") 
 							span.ms-font-m.buttonlabel Men's Shelter
 							img(src="/images/beds.svg")
 							span(v-text="sw[sw.length - 1]['Mens Shelter']") 
 				div.btn
 					div.row
-						a.select.m.block.ms-Button(@click="category('M')" href="#" name="M" title="Medical") 
+						a.select.m.block.ms-Button(v-if="!swactive" @click="category('M')" href="#" name="M" title="Medical") 
 							div(v-if="!swactive")
 								p.ms-font-m.buttonlabel Medical
 								img(src="/images/medical.svg")
-						a.select.m.block.ms-Button(v-if="swactive && sw" @click="category('Overflow')" href="#" name="Overflow" title="Overflow shelter") 
+						a.select.m.block.ms-Button(v-if="swactive && sw" @click="category('Overflow')" href="#" name="M" title="Overflow shelter") 
 							span.ms-font-m.buttonlabel Overflow Shelter
 							img(src="/images/beds.svg")
 							span(v-text="sw[sw.length - 1]['Overflow Shelter']") 
@@ -72,7 +72,7 @@ block content
 						a.select.f.block.ms-Button(v-if="!swactive" @click="category('F')" href="#" name="F" title="Food") 
 							p.ms-font-m.buttonlabel Food
 							img(src="/images/food.svg")
-						a.select.f.block.ms-Button(v-if="swactive && sw" @click="category('Miller')" href="#" name="Miller" title="Gail Miller Men's and Women's Resource Center")
+						a.select.f.block.ms-Button(v-if="swactive && sw" @click="category('Miller')" href="#" name="F" title="Gail Miller Men's and Women's Resource Center")
 							span.ms-font-m.buttonlabel Gail Miller
 							img(src="/images/beds.svg")
 							span(v-text="+sw[sw.length - 1]['Gail Miller (Men)'] + +sw[sw.length - 1]['Gail Miller (Women)']") 
@@ -81,7 +81,7 @@ block content
 						a.select.b.block.ms-Button(v-if="!swactive" @click="category('B')" href="#" name="B" title="Travel") 
 							p.ms-font-m.buttonlabel Travel
 							img(src="/images/travel.svg")
-						a.select.b.block.ms-Button(v-if="swactive && sw" @click="category('King')" href="#" name="C" title="Geraldine King Women's Resource Center") 
+						a.select.b.block.ms-Button(v-if="swactive && sw" @click="category('King')" href="#" name="B" title="Geraldine King Women's Resource Center") 
 							span.ms-font-m.buttonlabel Geraldine King
 							img(src="/images/beds.svg")
 							span(v-text="sw[sw.length - 1]['Geraldine King']") 
