--- a/views/publish.pug
+++ b/views/publish.pug
@@ -23,6 +23,8 @@ block content
 						v-if="btn && !isNaN(wWidth)", :d="dPathAttr()"
 						)
 
+		include menu.pug
+
 		div.buttonbox.tb-11-m0
 			div.row
 				div.btn(style="max-height: 50vh; margin-bottom: 10px;")
