--- a/views/register.pug
+++ b/views/register.pug
@@ -2,9 +2,9 @@ extends layout
 block page
 	- var menu = 'login'
 block content
-	div.ms-Grid
+	div.ms-Grid(style="pointer-events: all;")
 		div.row
-			div.tb-1-m0.tb-9-m1.tb-1-m2
+			div.tb-10-m0.tb-9-m1
 				
 				p.ms-font-xl Already Registered?
 				a.ms-Button.ms-Button--primary(href="/login", role="button", ariaDescription="Log in")
