--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,23 +11,25 @@ html
 		link(rel="stylesheet", href="/stylesheets/fabric.css")
 		link(rel="stylesheet", href="/stylesheets/fabric.components.css")
 		//- link(rel="stylesheet" href="/scripts/pickadate/default.css")
+
 		link(rel="stylesheet" href="/scripts/pickadate/default.date.css")
 		link(rel="stylesheet" href="/scripts/pickadate/default.time.css")
 		link(rel="stylesheet", href="/stylesheets/styles.css?v="+ Math.random())
 
+		script(type="text/javascript", src="/scripts/jquery.min.js")
 		if (env && env === 'production')
 			script(type="text/javascript", src="/scripts/vue.min.js")
 		else
 			script(type="text/javascript", src="/scripts/vue.js")
 
-		script(type="text/javascript", src="/scripts/jquery.min.js")
 		script(type="text/javascript", src="/scripts/leaflet.js")
-		//- script(type="text/javascript", src="/scripts/d3.v3.min.js")
+		script(type="text/javascript", src="/scripts/moment-with-locales.min.js")
+		script(src="https://d3js.org/d3.v4.min.js")
+		//- script(src="https://code.jquery.com/ui/1.11.1/jquery-ui.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.date.js")
 		script(type="text/javascript", src="/scripts/pickadate/picker.time.js")
-		script(type="text/javascript", src="/scripts/moment-with-locales.min.js")
-		script(src="https://d3js.org/d3.v4.min.js")
+		//- script(type="text/javascript", src="/scripts/d3.v3.min.js")
 
 		script.
 			// Polyfill Object.assign 
@@ -68,5 +70,5 @@ html
 		block content
 		a#publish_logo(href="https://github.com/tbushman/emergencyservices" target="_blank")
 			img(src="/images/publish_logo.svg")
-		
+
 		a#publish_logo.tb-font-xxs(href="//bli.sh/pp/blish", target="_blank", style="color: #fff;top: calc(var(--panelh) + var(--thumbw));right: 8px;margin:0;text-align:right;bottom: auto;") Privacy policy
