overflow shelter === overflow center

--- a/views/publish.pug
+++ b/views/publish.pug
@@ -68,7 +68,7 @@ block content
 						a.select.m.block.ms-Button(v-if="swactive && sw" @click="category('Overflow')" href="#" name="M" title="Overflow shelter") 
 							span.ms-font-m.buttonlabel Overflow Shelter
 							img(src="/images/beds.svg")
-							span(v-text="sw[sw.length - 1]['Overflow Shelter']") 
+							span(v-text="sw[sw.length - 1]['Overflow Center']") 
 				div.btn
 					div.row
 						a.select.f.block.ms-Button(v-if="!swactive" @click="category('F')" href="#" name="F" title="Food") 
