--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -60,8 +60,8 @@ p, #mainpanel > a.tb-11-m0 {
 	height: auto;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	/* overflow-x: hidden;
+	overflow-y: hidden; */
 	vertical-align: top;
 } 
 
